# gata-finetune

./: .gitignore  Dockerfile  README.md  pyproject.toml  train.py  training-data.schema.json
.github/: dependabot.yml
.github/workflows/: ci.yaml  release.yaml.txt
