[project]
name = "gata-finetune"
authors = [
    {name = "Dave Hall", email = "skwashd@gmail.com"},
]
description = "Train HF BERT model using Zendesk ticket data"

dependencies = [
  "datasets==4.5.0",
  "pandas==3.0.0",
  "scikit-learn==1.8.0",
  "torch==2.10.0",
  "transformers[torch]==5.0.0",
]

requires-python = "~=3.14.0"

readme = "README.md"

dynamic = ["version"]

[dependency-groups]
dev = [
  "ruff==0.15.0",
  "ty==0.0.14",
]

[tool.ruff.lint]
# Rules listed at https://github.com/charliermarsh/ruff#supported-rules
select = ["B", "D", "E", "F", "G", "I", "N", "S", "W", "ANN" ,"BLE", "C4", "C90", "DTZ", "ERA", "PLW", "PT", "RET", "RUF", "SIM", "TRY", "UP"]
ignore = ["D203", "D211", "D212", "E501", "F403", "F405"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["B", "D", "E", "F", "G", "I", "N", "S", "W", "ANN" ,"BLE", "C4", "C90", "DTZ", "ERA", "PLW", "PT", "RET", "RUF", "SIM", "TRY", "UP"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S108"]